--- a/Usage_Terms/index.html
+++ b/Usage_Terms/index.html
@@ -58,8 +58,8 @@
         <br>Our content is on an AS IS basis, subject to change.
         <br>This is not our full terms of service, just general usage guidelines in an easy-to-read format.
         <br>If you're not sure about your content usage, please contact me!
-        <br>Note: You may not use my banner, background or any other resources that contain my brand name (Nexint).
-        These assets are still protected by copyright law, and you may not legally use these resources.
+        <br><i>Note: You may not use my banner, background or any other resources that contain my brand name, Nexint.
+          These assets are still protected by copyright law, and you may not legally use these resources.</i>
       </p>
     </div>
   </div>
@@ -72,13 +72,11 @@
 <div class="row">
   <div class="centered">
     <button type="button" class="titlebars">
-      <h2>Open source:</h2>
+      <h2>Art:</h2>
     </button>
     <div class="content" style="height:200px;">
       <p class="desctext">
-        These terms of service focus on our open source art, music, etc!
-        <br>Open source music, art and videos is defined as the entire creation process (the FLP or PSD file) being public.
-        <br>Subject to change.
+        These terms of service focus on our art!
       </p>
     </div>
   </div>
@@ -91,17 +89,18 @@
     </button>
     <div class="content" style="height:200px;">
       <p class="desctext">
-        <i>Note: Open source generally means that you can use it for almost any purpose, without credit. Credit is always appreciated though!</i>
+        <i>Note: I'm still learning drawing, so I'm not that good! This is mostly relevant later on, if ever.</i>
       </p>
       <ul class="desctext">
-        <li>All: Taking inspiration on anything.</li>
-        <li>Art: Tracing (with credit)</li>
-        <li>Art: Changing colors, lines, etc</li>
-        <li>Art: Taking the line art to draw something new</li>
-        <li>Music: Changing anything with the songs</li>
-        <li>Music: Adding vocals, etc</li>
-        <li>Videos: Taking my editing style and changing clips.</li>
+        <li>Taking inspiration off of my drawings.</li>
+        <li>Using my sketches (but not a good idea to directly copy my sketches! / sketches aren't complete and are low quality)</li>
+        <li>Using my full drawings (non commercially, IE: profile pictures on social media, etc), credit will be baked in.</li>
+        <li>Downloading my images for personal use (as a desktop background)</li>
+        <li>Tracing, but credit is appreciated!</li>
       </ul>
+      <p class="desctext">
+        <i>Tracing isn't a good idea. It may or may not help you draw better, and I personally advise against it. I won't stop you though.</i>
+      </p>
     </div>
   </div>
   <div class="main">
@@ -110,6 +109,13 @@
     </button>
     <div class="content" style="height:200px;">
       <ul class="desctext">
+        <li>Importing my images into an AI, for any purpose. <i>This does not apply for comedic use cases, like for a funny YouTube video.</i>
+          <br>This is specifically to prevent AI models from the internet stealing my drawings, if that ever happens. Non-AI corporations are not affected. <i>Probably won't happen though.</i>
+        </li>
+        <li>Intentionally removing my signature from the art.</li>
+        <li>Selling any of my art.</li>
+        <li>Directly using my full drawings, if you are a massive company (net profit > 1M / yr) and have not comissioned me. Does not apply for references.</li>
+        <li>Claiming my art as yours.</li>
         <li>Any usage that breaks the Christian Bible.</li>
         <li>Any usage against the Canadian law.</li>
         <li>Any usage against your local law.</li>
