Usage Terms update #2

--- a/Usage_Terms/index.html
+++ b/Usage_Terms/index.html
@@ -110,7 +110,7 @@
     <div class="content" style="height:200px;">
       <ul class="desctext">
         <li>Importing my images into an AI, for any purpose. <i>This does not apply for comedic use cases, like for a funny YouTube video.</i>
-          <br>This is specifically to prevent AI models from the internet stealing my drawings, if that ever happens. Non-AI corporations are not affected. <i>Probably won't happen though.</i>
+          <br>Addendulum: This is specifically to prevent AI models from the internet stealing my drawings, if that ever happens. Non-AI corporations are not affected.
         </li>
         <li>Intentionally removing my signature from the art.</li>
         <li>Selling any of my art.</li>
