--- a/Usage_Terms/index.html
+++ b/Usage_Terms/index.html
@@ -55,6 +55,7 @@
         These terms of service are subject to change at any time, at any moment, and for any reason.
         <br>We do not guarantee any availability for our content, nor do we provide liability for any damage to your computer caused by our content.
         <br>If your usage was previously allowed, but then becomes disallowed later, you will no longer be able to use our content.
+        <br><b>If you do not agree to these terms and conditions, you do not have the right to use my content. Using my content implies an agreement of these terms and conditions.</b>
         <br>Our content is on an AS IS basis, subject to change.
         <br>This is not our full terms of service, just general usage guidelines in an easy-to-read format.
         <br>If you're not sure about your content usage, please contact me!
