Usage Terms Update / Clarity

--- a/Usage_Terms/index.html
+++ b/Usage_Terms/index.html
@@ -41,7 +41,7 @@
 
 <div class="cover">
   <div class="textcentered">
-    <h1>Usage Terms</h1>
+    <h1>Usage Terms (1.5)</h1>
   </div>
 </div>
 
@@ -52,15 +52,17 @@
     </button>
     <div class="content" style="height:200px;">
       <p class="desctext">
-        These terms of service are subject to change at any time, at any moment, and for any reason.
+        These usage guidelines are subject to change at any time, at any moment, and for any reason.
         <br>We do not guarantee any availability for our content, nor do we provide liability for any damage to your computer caused by our content.
-        <br>If your usage was previously allowed, but then becomes disallowed later, you will no longer be able to use our content.
+        <br>If your usage was previously allowed, but then becomes disallowed later, please provide proof of the old usage guidelines AND the date of your use case, and you will still be compliant.
+        <br><i><b>New usages</b> of my work under any previous revision of the usage guidelines are not allowed.</i>
         <br><b>If you do not agree to these terms and conditions, you do not have the right to use my content. Using my content implies an agreement of these terms and conditions.</b>
         <br>Our content is on an AS IS basis, subject to change.
         <br>This is not our full terms of service, just general usage guidelines in an easy-to-read format.
         <br>If you're not sure about your content usage, please contact me!
         <br><i>Note: You may not use my banner, background or any other resources that contain my brand name, Nexint.
           These assets are still protected by copyright law, and you may not legally use these resources.</i>
+        <br> Updated 10:25 PM EST / Dec 3, 2024.
       </p>
     </div>
   </div>
