--- a/Usage_Terms/index.html
+++ b/Usage_Terms/index.html
@@ -41,7 +41,7 @@
 
 <div class="cover">
   <div class="textcentered">
-    <h1>Usage Terms (1.5)</h1>
+    <h1>Usage Terms (v1.5)</h1>
   </div>
 </div>
 
@@ -54,7 +54,7 @@
       <p class="desctext">
         These usage guidelines are subject to change at any time, at any moment, and for any reason.
         <br>We do not guarantee any availability for our content, nor do we provide liability for any damage to your computer caused by our content.
-        <br>If your usage was previously allowed, but then becomes disallowed later, please provide proof of the old usage guidelines AND the date of your use case, and you will still be compliant.
+        <br>If your usage was previously allowed, but then becomes disallowed later, please provide proof of the old usage guidelines AND the date of your use case, and you will still be compliant for 1 year.
         <br><i><b>New usages</b> of my work under any previous revision of the usage guidelines are not allowed.</i>
         <br><b>If you do not agree to these terms and conditions, you do not have the right to use my content. Using my content implies an agreement of these terms and conditions.</b>
         <br>Our content is on an AS IS basis, subject to change.
