--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -49,17 +49,14 @@
 <div class="row">
   <div class="side">
     <button type="button" class="titlebars">
-      <h2>Socials</h2>
+      <h2>Relevant Socials</h2>
     </button>
     <div class="content" style="height:200px;">
       <p class="desctext">
-        Sorted from importance. These are all of our socials, YT channels, and such.
+        Sorted from importance. These are the most relevant socials I have that you would be the most interested in.
       </p>
       <a href="https://www.youtube.com/@Nexint">
         YT: Nexint
-      </a>
-      <a href="https://github.com/Nexints">
-        Github: Nexints
       </a>
       <a href="https://discord.gg/k5mfWReazF">
         Discord Server:
@@ -67,38 +64,11 @@
       <a href="mailto:business@nexint.org">
         E-mail: business@nexint.org
       </a>
-      <a href="http://twitch.tv/nexints">
-        Twitch: @Nexints 
-      </a>
       <a href="https://x.com/@Nexints">
         Twitter: @Nexints
       </a>
-      <a href="https://www.reddit.com/user/Nexints/">
-        Reddit: Nexints
-      </a>
-      <a href="https://www.youtube.com/@Nex_Beats">
-        YT: Nex Beats
-      </a>
-      <a href="https://www.youtube.com/@Nex_Clips">
-        YT: Nex Clips
-      </a>
-      <a href="https://www.youtube.com/@Cloudray">
-        YT: Cloudray (Collab)
-      </a>
-      <a href="http://www.youtube.com/@SmolInternet">
-        YT: SmolInternet (Collab)
-      </a>
-      <a href="https://www.youtube.com/@ripplemc">
-        YT: RippleMC ⚰
-      </a>
-      <a href="https://www.youtube.com/@celestialbubble">
-        YT: CelestialBubble ⚰
-      </a>
-      <a href="https://www.youtube.com/@youtube_tutorials">
-        YT: Cloudray's YouTube Tutorials ⚰
-      </a>
-      <a href="#">
-        YT: Nex_Plus ⚰⚰⚰ (Deleted)
+      <a href="https://www.youtube.com/@Nex_Plus">
+        YT: Nex Plus
       </a>
     </div>
   </div>
@@ -107,6 +77,13 @@
       <h2>Github Stuff</h2>
     </button>
     <div class="content" style="height:200px;">
+      <a href="https://github.com/Nexints">
+        Official Github
+      </a>
+      <p class="desctext">
+        Description:<br>Our official github! This is where we store all of our open source coding projects.
+        Most of our projects will be open sourced!
+      </p>
       <a href="https://github.com/Nexints/Nexints.github.io">
         Source Code
       </a>
@@ -134,13 +111,7 @@
       <a href="https://docs.google.com/document/d/1gb7TubsdVm40zwtyxnHLiUuaWk1eMWxetINRi3gpyaA/edit?usp=sharing">
         Synopsis for DDLT (if you want, you can steal the ideas, branding and more for this mod without credit!)
       </a>
-      <a href="https://github.com/Nexints">
-        Official Github
-      </a>
-      <p class="desctext">
-        Description:<br>Our official github! This is where we store all of our open source coding projects.
-        Most of our projects will be open sourced!
-      </p>
+      
     </div>
   </div>
 </div>
@@ -184,6 +155,42 @@
       </a>
       <a href="https://www.youtube.com/watch?v=V2UixW-3bkg">
         SWAGGEST Dash Completion!
+      </a>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="centered">
+    <button type="button" class="titlebars">
+      <h2>Other Socials</h2>
+    </button>
+    <div class="content" style="height:200px;">
+      <p class="desctext">
+        Other random socials. Go here if you want to see what I've done before, and still doing!
+      </p>
+      <a href="http://twitch.tv/nexints">
+        Twitch: @Nexints 
+      </a>
+      <a href="https://www.reddit.com/user/Nexints/">
+        Reddit: Nexints
+      </a>
+      <a href="https://www.youtube.com/@Nex_Beats">
+        YT: Nex Beats
+      </a>
+      <a href="https://www.youtube.com/@Cloudray">
+        YT: Cloudray (Collab)
+      </a>
+      <a href="http://www.youtube.com/@SmolInternet">
+        YT: SmolInternet (Collab)
+      </a>
+      <a href="https://www.youtube.com/@ripplemc">
+        YT: RippleMC ⚰ (Not associated with the Ripple scam going on!)
+      </a>
+      <a href="https://www.youtube.com/@celestialbubble">
+        YT: CelestialBubble ⚰
+      </a>
+      <a href="https://www.youtube.com/@youtube_tutorials">
+        YT: YT Tutorials ⚰
       </a>
     </div>
   </div>
