--- a/index.html
+++ b/index.html
@@ -145,6 +145,12 @@
     </button>
     <div class="content" style="height:200px;">
       <p class="desctext">
+        12/06/2024:
+        <br>/ Updated Portfolio
+        <br>/ Updated SpaceLink
+        <br>/ Bugfixes, Bugfixes, Bugfixes.
+      </p>
+      <p class="desctext">
         12/04/2024:
         <br>/ Modified where the gospel goes to.
         <br>/ Changed the TOS to include open source music and art.
