--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -189,7 +189,7 @@
       <a href="https://www.youtube.com/@celestialbubble">
         YT: CelestialBubble ⚰
       </a>
-      <a href="https://www.youtube.com/@youtube_tutorials">
+      <a href="https://www.youtube.com/@youtube-tutorials">
         YT: YT Tutorials ⚰
       </a>
     </div>
