--- a/Usage_Terms/index.html
+++ b/Usage_Terms/index.html
@@ -41,7 +41,7 @@
 
 <div class="cover">
   <div class="textcentered">
-    <h1>Usage Terms (v1.5)</h1>
+    <h1>Usage Terms (v1.6)</h1>
   </div>
 </div>
 
@@ -54,15 +54,15 @@
       <p class="desctext">
         These usage guidelines are subject to change at any time, at any moment, and for any reason.
         <br>We do not guarantee any availability for our content, nor do we provide liability for any damage to your computer caused by our content.
-        <br>If your usage was previously allowed, but then becomes disallowed later, please provide proof of the old usage guidelines AND the date of your use case, and you will still be compliant for 1 year.
+        <br>Pleae check these usage guidelines every so often! New TOS changes apply after 30 days, so you have been warned.
         <br><i><b>New usages</b> of my work under any previous revision of the usage guidelines are not allowed.</i>
         <br><b>If you do not agree to these terms and conditions, you do not have the right to use my content. Using my content implies an agreement of these terms and conditions.</b>
         <br>Our content is on an AS IS basis, subject to change.
         <br>This is not our full terms of service, just general usage guidelines in an easy-to-read format.
-        <br>If you're not sure about your content usage, please contact me!
+        <br>If you're not sure about your content usage, please contact me! This is a case-by-case basis.
         <br><i>Note: You may not use my banner, background or any other resources that contain my brand name, Nexint.
           These assets are still protected by copyright law, and you may not legally use these resources.</i>
-        <br> Updated 10:25 PM EST / Dec 3, 2024.
+        <br> Updated 11:07 PM EST / Dec 9, 2024.
       </p>
     </div>
   </div>
@@ -93,13 +93,17 @@
     <div class="content" style="height:200px;">
       <p class="desctext">
         <i>Note: I'm still learning drawing, so I'm not that good! This is mostly relevant later on, if ever.</i>
+        <br><i>I also make some of my art open source (the layers are all visible), so look out for that!</i>
       </p>
       <ul class="desctext">
         <li>Taking inspiration off of my drawings.</li>
         <li>Using my sketches (but not a good idea to directly copy my sketches! / sketches aren't complete and are low quality)</li>
         <li>Using my full drawings (non commercially, IE: profile pictures on social media, etc), credit will be baked in.</li>
+        <li>Referencing, <b>even heavy referencing</b>.</li>
         <li>Downloading my images for personal use (as a desktop background)</li>
-        <li>Tracing, but credit is appreciated!</li>
+        <li>Using my artwork for a YouTube video (credit is appreciated!)</li>
+        <li>For YouTube, monetization is OK as long as you are not a large corporation, and as long as your usage is transformative.</li>
+        <li>Tracing, but credit is required.</li>
       </ul>
       <p class="desctext">
         <i>Tracing isn't a good idea. It may or may not help you draw better, and I personally advise against it. I won't stop you though.</i>
@@ -112,12 +116,12 @@
     </button>
     <div class="content" style="height:200px;">
       <ul class="desctext">
-        <li>Importing my images into an AI, for any purpose. <i>This does not apply for comedic use cases, like for a funny YouTube video.</i>
-          <br>Addendulum: This is specifically to prevent AI models from the internet stealing my drawings, if that ever happens. Non-AI corporations are not affected.
+        <li>Importing my images into an AI, for any purpose. <i>This does not apply for comedic use cases.</i>
+          <br>Addendulum: This is specifically to prevent AI models from the internet stealing my drawings, if that ever happens. Non corporations are not affected.
         </li>
-        <li>Intentionally removing my signature from the art.</li>
-        <li>Selling any of my art.</li>
-        <li>Directly using my full drawings, if you are a massive company (net profit > 1M / yr) and have not comissioned me. Does not apply for references.</li>
+        <li>Intentionally removing signatures from my art. Does not apply if the effect is unintentional (PFP cropping).</li>
+        <li>Selling any of my art as yours.</li>
+        <li>Any monetization or use of my artwork <b>if you are a massive corporation</b> (>$1M / yr). Does not apply to comissions.</li>
         <li>Claiming my art as yours.</li>
         <li>Any usage that breaks the Christian Bible.</li>
         <li>Any usage against the Canadian law.</li>
