Updated Art TOS

--- a/Usage_Terms/index.html
+++ b/Usage_Terms/index.html
@@ -53,16 +53,15 @@
     <div class="content" style="height:200px;">
       <p class="desctext">
         These usage guidelines are subject to change at any time, at any moment, and for any reason.
+        <br>Using anything I post implies an agreement to these terms and conditions. If you do not agree to these terms and conditions, you do not have the right to use anything I make.
         <br>We do not guarantee any availability for our content, nor do we provide liability for any damage to your computer caused by our content.
-        <br>Pleae check these usage guidelines every so often! New TOS changes apply after 30 days, so you have been warned.
-        <br><i><b>New usages</b> of my work under any previous revision of the usage guidelines are not allowed.</i>
-        <br><b>If you do not agree to these terms and conditions, you do not have the right to use my content. Using my content implies an agreement of these terms and conditions.</b>
+        <br>Pleae check these usage guidelines every so often! Any TOS changes apply after 30 days from updating.
         <br>Our content is on an AS IS basis, subject to change.
         <br>This is not our full terms of service, just general usage guidelines in an easy-to-read format.
         <br>If you're not sure about your content usage, please contact me! This is a case-by-case basis.
         <br><i>Note: You may not use my banner, background or any other resources that contain my brand name, Nexint.
           These assets are still protected by copyright law, and you may not legally use these resources.</i>
-        <br> Updated 11:07 PM EST / Dec 9, 2024.
+        <br> Updated 2:32 AM EST / Dec 23, 2024.
       </p>
     </div>
   </div>
@@ -96,17 +95,17 @@
         <br><i>I also make some of my art open source (the layers are all visible), so look out for that!</i>
       </p>
       <ul class="desctext">
-        <li>Taking inspiration off of my drawings.</li>
-        <li>Using my sketches (but not a good idea to directly copy my sketches! / sketches aren't complete and are low quality)</li>
-        <li>Using my full drawings (non commercially, IE: profile pictures on social media, etc), credit will be baked in.</li>
-        <li>Referencing, <b>even heavy referencing</b>.</li>
-        <li>Downloading my images for personal use (as a desktop background)</li>
+        <li>Using my sketches.</li>
+        <li>Using my drawings non commercially (ex: profile pictures on social media, etc.)</li>
+        <li>Referencing or taking inspiration. Ask me or give credit if you're not sure.</li>
+        <li>Tracing, but credit is required.</li>
+        <li>Downloading my images for personal use (ex: as a desktop background) <i>but please message me for the original high-quality version!</i></li>
         <li>Using my artwork for a YouTube video (credit is appreciated!)</li>
         <li>For YouTube, monetization is OK as long as you are not a large corporation, and as long as your usage is transformative.</li>
-        <li>Tracing, but credit is required.</li>
+        
       </ul>
       <p class="desctext">
-        <i>Tracing isn't a good idea. It may or may not help you draw better, and I personally advise against it. I won't stop you though.</i>
+        <i>Tracing isn't a good idea. I advice against tracing, but I won't stop you.</i>
       </p>
     </div>
   </div>
@@ -116,17 +115,17 @@
     </button>
     <div class="content" style="height:200px;">
       <ul class="desctext">
-        <li>Importing my images into an AI, for any purpose. <i>This does not apply for comedic use cases.</i>
-          <br>Addendulum: This is specifically to prevent AI models from the internet stealing my drawings, if that ever happens. Non corporations are not affected.
+        <li>Using my images in AI. <i>This does not apply for comedic use cases.</i>
+          <br>Addendulum: This is specifically to prevent AI models from the internet stealing my drawings.
         </li>
-        <li>Intentionally removing signatures from my art. Does not apply if the effect is unintentional (PFP cropping).</li>
+        <li>Intentionally tampering with my art to remove watermarks.</li>
         <li>Selling any of my art as yours.</li>
-        <li>Any monetization or use of my artwork <b>if you are a massive corporation</b> (>$1M / yr). Does not apply to comissions.</li>
+        <li>Any use of my artwork <b>if you are a corporation or company</b>, and have not comissioned me directly. <i>Small companies and start-ups are exempt from this rule.</i></li>
         <li>Claiming my art as yours.</li>
         <li>Any usage that breaks the Christian Bible.</li>
         <li>Any usage against the Canadian law.</li>
         <li>Any usage against your local law.</li>
-        <li>Usage of my music for exploitative purposes.</li>
+        <li>Usage of my art for exploitative purposes.</li>
         <li>Examples include: Pay-to-win games, Scams made to exploit people, Uploading without consent, etc.</li>
         <li><i>The bible takes priority over the law in this case.</i></li>
       </ul>
