DDLT Revival Update

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -99,17 +99,16 @@
         Open source, free forever, and no strings attatched. Developed by Nexint Official.
         <br>Coded in Batch.
       </p>
-      <a href="https://github.com/Nexints/Doki-Doki-LifeTimes">
+      <a href="https://github.com/Nexints/DokiDokiLifeTimes">
         Doki Doki LifeTimes ⚰
       </a>
       <p class="desctext">
-        Description:<br>I originally coded this project at around March of 2024, however I officially discontinued the project on July 13th, 2024.
-        The github repository is curently deleted, as we may not have full permission to use these assets.
-        However, if you'd like to use this idea and would like to have the original source code, contact me!
+        Description:<br>I originally coded this project at around March of 2024, however I officially "discontinued the project" on July 13th, 2024.
+        Development resumed on Janurary 29th, 2025, and the mod has since been uncancelled.
         <br>Coded in Renpy and Python.
       </p>
       <a href="https://docs.google.com/document/d/1gb7TubsdVm40zwtyxnHLiUuaWk1eMWxetINRi3gpyaA/edit?usp=sharing">
-        Synopsis for DDLT (if you want, you can steal the ideas, branding and more for this mod without credit!)
+        Original Synopsis for DDLT (Modified in the actual mod)
       </a>
       
     </div>
