--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -91,6 +91,17 @@
         Description:<br>Source code for our official website!
         <br>Coded in HTML, CSS and Javascript.
       </p>
+      <a href="https://github.com/Nexints/DokiDokiLifeTimes">
+        Doki Doki LifeTimes
+      </a>
+      <p class="desctext">
+        Description:<br>I originally coded this project at around March of 2024, however I officially "discontinued the project" on July 13th, 2024.
+        <br>This mod has since been revived, and is currently being worked on.
+        <br>Coded in Renpy and Python.
+      </p>
+      <a href="https://docs.google.com/document/d/1gb7TubsdVm40zwtyxnHLiUuaWk1eMWxetINRi3gpyaA/edit?usp=sharing">
+        Original Synopsis for DDLT (Modified in the actual mod)
+      </a>
       <a href="https://github.com/Nexints/OpenRepair">
         OpenRepair
       </a>
@@ -99,17 +110,6 @@
         Open source, free forever, and no strings attatched. Developed by Nexint Official.
         <br>Coded in Batch.
       </p>
-      <a href="https://github.com/Nexints/DokiDokiLifeTimes">
-        Doki Doki LifeTimes ⚰
-      </a>
-      <p class="desctext">
-        Description:<br>I originally coded this project at around March of 2024, however I officially "discontinued the project" on July 13th, 2024.
-        Development resumed on Janurary 29th, 2025, and the mod has since been uncancelled.
-        <br>Coded in Renpy and Python.
-      </p>
-      <a href="https://docs.google.com/document/d/1gb7TubsdVm40zwtyxnHLiUuaWk1eMWxetINRi3gpyaA/edit?usp=sharing">
-        Original Synopsis for DDLT (Modified in the actual mod)
-      </a>
       
     </div>
   </div>
