--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -58,6 +58,9 @@
       <a href="https://www.youtube.com/@Nexint">
         YT: Nexint
       </a>
+      <a href="https://files.nexint.org/">
+        Download music here: Username: "user", PW: "nexint"
+      </a>
       <a href="https://discord.gg/k5mfWReazF">
         Discord Server:
       </a>
