--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -59,7 +59,7 @@
         YT: Nexint
       </a>
       <a href="https://files.nexint.org/">
-        Download music here: Username: "user", PW: "nexint"
+        Download music here: - Contact me for username and password!
       </a>
       <a href="https://discord.gg/k5mfWReazF">
         Discord Server:
