--- a/About_Me/index.html
+++ b/About_Me/index.html
@@ -132,16 +132,16 @@
     </button>
     <div class="content" style="height:200px;">
       <p class="desctext">
-        Some basic facts about myself so you can know me better as a human!
+        Some basic facts about myself so you can know me better!
       </p>
       <ul class="desctext">
         <li>I play games too often.
         <li>Not a big fan of drop towers.
-        <li>Funny enough, I like rollercoasters. I just don't know why.
-        <li>I personally don't like the dark.
+        <li>Alternatively, I like rollercoasters.
+        <li>Not a fan of the dark.
         <li>I'm bad at video games, if it wasn't obvious from my website.
         <li>Ironically, the exception is tetr.io, where I hit X rank.
-        <li>I can't draw. I tried, it didn't work.
+        <li>I've tried too many different things at once.
       </ul>
     </div>
   </div>
