--- a/byte-ai/index.html
+++ b/byte-ai/index.html
@@ -168,7 +168,7 @@
   <a href="/About_Me/" class="left">About Me</a>
   <a href="/Blog" class="left">Blog</a>
   <a href="/Usage_Terms/" class="right">Usage Terms</a>
-  <a href="/Legal/" class="right">Legal</a>
+  <a href="/byte-ai/privacy-policy/" class="right">Legal</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
