--- a/byte-ai/privacy-policy/index.html
+++ b/byte-ai/privacy-policy/index.html
@@ -44,7 +44,7 @@
 
         <div class="cover">
             <div class="textcentered">
-                <h1>Privacy Policy</h1>
+                <h1>Privacy Policy for Byte. AI</h1>
             </div>
         </div>
 
