Privacy Policy Updated (2)

--- a/byte-ai/privacy-policy/index.html
+++ b/byte-ai/privacy-policy/index.html
@@ -825,7 +825,7 @@
         </script>
 
         <div class="navbar" id="myTopnav">
-            <a href="/" class="navcenter">Home</a>
+            <a href="/byte-ai/" class="navcenter">Home</a>
             <a href="/Portfolio/" class="left">Portfolio</a>
             <a href="/About_Me/" class="left">About Me</a>
             <a href="/Blog/" class="left">Blog</a>
