--- a/Usage_Terms/index.html
+++ b/Usage_Terms/index.html
@@ -41,7 +41,7 @@
 
 <div class="cover">
   <div class="textcentered">
-    <h1>Usage Terms (v1.6)</h1>
+    <h1>Usage Terms (v1.7)</h1>
   </div>
 </div>
 
@@ -55,14 +55,35 @@
         These usage guidelines are subject to change at any time, at any moment, and for any reason.
         <br>Using anything I post implies an agreement to these terms and conditions. If you do not agree to these terms and conditions, you do not have the right to use anything I make.
         <br>We do not guarantee any availability for our content, nor do we provide liability for any damage to your computer caused by our content.
+        <br><b>Whatever usages I have permitted to you in private take priority over this document.</b>
+        <br>I remain the sole copyright owner of my content. I hold the right to revoke your use case of my content, and tou may not use my usage terms as legal justification in court in this case.
+        <br><b>If for any reason I have given you an exemption to use my content, this exemption only applies to your specific use case, all future use cases fall under these terms.</b>
         <br>Pleae check these usage guidelines every so often! Any TOS changes apply after 30 days from updating.
-        <br>Our content is on an AS IS basis, subject to change.
+        <br>Our content and usage guidelines are on an AS IS basis, subject to change.
         <br>This is not our full terms of service, just general usage guidelines in an easy-to-read format.
         <br>If you're not sure about your content usage, please contact me! This is a case-by-case basis.
         <br><i>Note: You may not use my banner, background or any other resources that contain my brand name, Nexint.
           These assets are still protected by copyright law, and you may not legally use these resources.</i>
-        <br> Updated 2:32 AM EST / Dec 23, 2024.
+        <br> Updated 11:24 AM EST / Feb 8, 2025.
       </p>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="centered">
+    <button type="button" class="titlebars">
+      <h2>General Notes:</h2>
+    </button>
+    <div class="content" style="height:200px;">
+      <ul class="desctext">
+        <li>Unless otherwise stated, using anything I make for AI purposes is illegal.
+          <br>This includes (but is not limited to) putting my content through an AI filter, creating deeepfaces, training LLMs from my work, and more.
+        </li>
+        <li>Any commercial usage by any corporation (excluding monetization on YouTube) may require a revenue split. Message me for more details.
+          <br>Do not release anything for commercial usage without my explicit approval! Personal use remains unaffected.
+        </li>
+      </ul>
     </div>
   </div>
 </div>
@@ -95,13 +116,13 @@
         <br><i>I also make some of my art open source (the layers are all visible), so look out for that!</i>
       </p>
       <ul class="desctext">
-        <li>Using my sketches.</li>
+        <li>Using my sketches for reference or inspiration.</li>
         <li>Using my drawings non commercially (ex: profile pictures on social media, etc.)</li>
         <li>Referencing or taking inspiration. Ask me or give credit if you're not sure.</li>
         <li>Tracing, but credit is required.</li>
         <li>Downloading my images for personal use (ex: as a desktop background) <i>but please message me for the original high-quality version!</i></li>
         <li>Using my artwork for a YouTube video (credit is appreciated!)</li>
-        <li>For YouTube, monetization is OK as long as you are not a large corporation, and as long as your usage is transformative.</li>
+        <li>For YouTube, monetization is OK as long as you are not a corporation, and as long as your usage is transformative.</li>
         
       </ul>
       <p class="desctext">
