Updated music guidelines for clarity!

--- a/Usage_Terms/index.html
+++ b/Usage_Terms/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-<title>Nexint's Website</title>
+<title>Usage Terms for Nexint</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="/styles.css">
@@ -64,7 +64,7 @@
         <br>If you're not sure about your content usage, please contact me! This is a case-by-case basis.
         <br><i>Note: You may not use my banner, background or any other resources that contain my brand name, Nexint.
           These assets are still protected by copyright law, and you may not legally use these resources.</i>
-        <br> Updated 11:24 AM EST / Feb 8, 2025.
+        <br> Updated 1:37 PM EST / Mar 13, 2025.
       </p>
     </div>
   </div>
@@ -167,7 +167,7 @@
       <p class="desctext">
         These terms of service focus on our solo music!
         <br>These only apply to non-collaboration songs, where I make everything myself.
-        <br>Note: These songs are generally dedicated to the community, as I'm trying to make my terms as open as possible.
+        <br>Note: These songs are generally dedicated to the community, as I'm trying to make my terms as open as possible. This section is the only section where credit is never necessary, even if I say otherwise.
         <br>Subject to change.
       </p>
     </div>
@@ -181,6 +181,7 @@
     </button>
     <div class="content" style="height:200px;">
       <ul class="desctext">
+        <li>TLDR: All music is listed as CC0. Moral rights are still retained.</li>
         <li>Saving my music onto your computer.</li>
         <li>Unlimited listening of my music!</li>
         <li>Using my music in a non-commercial way (Credit is appreciated!)</li>
@@ -198,7 +199,7 @@
         <li>Any usage that breaks the Christian Bible.</li>
         <li>Any usage against the Canadian law.</li>
         <li>Any usage against your local law.</li>
-        <li>Usage of my music for exploitative purposes.</li>
+        <li>Usage of my music for exploitative purposes. (Falls under moral rights)</li>
         <li>Examples include: Pay-to-win games, Scams made to exploit people, Uploading without consent, etc.</li>
         <li><i>The bible takes priority over the law in this case.</i></li>
       </ul>
