--- a/Usage_Terms/index.html
+++ b/Usage_Terms/index.html
@@ -181,11 +181,9 @@
     </button>
     <div class="content" style="height:200px;">
       <ul class="desctext">
-        <li>TLDR: All music is listed as CC0. Moral rights are still retained.</li>
         <li>Saving my music onto your computer.</li>
         <li>Unlimited listening of my music!</li>
-        <li>Using my music in a non-commercial way (Credit is appreciated!)</li>
-        <li>Using my music commercially (Credit is appreciated!)</li>
+        <li>Using my music in a non-commercial or commercial way (Credit is appreciated!)</li>
         <li>Unlimited copying and sharing of our music (Credit is appreciated!)</li>
       </ul>
     </div>
