--- a/index.html
+++ b/index.html
@@ -145,6 +145,13 @@
     </button>
     <div class="content" style="height:200px;">
       <p class="desctext">
+        3/26/2025:
+        <br>/ Added redirect to Discord server! 
+      </p>
+      <a href="https://www.nexint.org/discord">
+        Discord server redirect!
+      </a>
+      <p class="desctext">
         12/06/2024:
         <br>/ Updated Portfolio
         <br>/ Updated SpaceLink
